# GoIT_Web_HomeWork_8_2

./: consumer.py  producer.py  pyproject.toml
